--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@
   --light-slate: #8e8f99;
   --corn-flower: #e7e9fc;
   --cloud: #f4f4fd;
-  --navy-blue-overlay: rgba(46, 47, 66, 40);
+  --navy-blue-overlay: rgba(46, 47, 66, 0.4);
   --grey: rgba(46, 47, 66, 70);
   --white: #ffffff;
   --dairy: #fcfcfc;
@@ -134,6 +134,7 @@ img {
   gap: 40px;
 }
 .navigation-item {
+  position: relative;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -141,11 +142,28 @@ img {
   color: var(--navy-blue);
   padding: 24px 0;
   display: block;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .navigation-item:hover,
 .navigation-item:focus {
   color: var(--ocean);
+}
+
+.current {
+  color: var(--ocean);
+}
+
+.current::after {
+  content: '';
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  bottom: 0;
+  background-color: var(--ocean);
 }
 
 .header-address {
@@ -164,6 +182,8 @@ img {
   letter-spacing: 0.02em;
   padding: 24px 0;
   display: block;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 address a:hover,
@@ -220,7 +240,43 @@ address a:focus {
 }
 
 .project-cards-item {
+  position: relative;
   width: calc((100% - 2 * 24px) / 3);
+
+  overflow: hidden;
+}
+
+.project-cards-item:hover,
+.project-cards-item:focus {
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+}
+
+.project-cards-item:hover .project-overlay,
+.project-cards-item:focus .project-overlay {
+  transform: translateY(0);
+}
+
+.project-cards-image-box {
+  position: relative;
+  overflow: hidden;
+}
+
+.project-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background-color: var(--iris);
+  color: var(--cloud);
+  padding: 40px 32px;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .project-header {
@@ -229,7 +285,7 @@ address a:focus {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: var(--navy-blue);
-  margin-bottom: 8px
+  margin-bottom: 8px;
 }
 
 .project-description {
@@ -248,6 +304,9 @@ address a:focus {
 /*Hero*/
 .section-hero {
   background-color: var(--navy-blue);
+  background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url('../images/hero/hero-bg.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
   padding: 188px 0;
 }
 
@@ -276,6 +335,8 @@ address a:focus {
   min-width: 169px;
   height: 56px;
   border: none;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero-button:hover,
@@ -295,6 +356,21 @@ address a:focus {
 
 .feature-item {
   width: 264px;
+}
+
+.feature-item-image {
+  width: 264px;
+  height: 112px;
+  padding: 24px;
+  margin-bottom: 8px;
+
+  border-radius: 4px;
+  background: var(--cloud);
+}
+
+.feature-item-icon {
+  display: block;
+  margin: 0 auto;
 }
 
 .features-item-header {
@@ -372,7 +448,7 @@ address a:focus {
   letter-spacing: 0.02em;
   color: var(--navy-blue);
   text-align: center;
-  margin-bottom: 8px
+  margin-bottom: 8px;
 }
 
 .team-list-item-description {
@@ -392,11 +468,152 @@ address a:focus {
   padding: 32px 0;
 }
 
+.team-list-item-socials {
+  display: flex;
+  gap: 24px;
+}
+
+.team-list-item-social-link {
+  background-color: var(--iris);
+
+  width: 40px;
+  height: 40px;
+
+  padding: 12px;
+
+  border-radius: 50%;
+}
+
+.team-list-item-social-icon {
+  fill: var(--cloud);
+}
+
+/*Customers*/
+.section-customers {
+  background-color: var(--white);
+  padding: 120px 0;
+}
+
+.customer-header {
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 1.2;
+  text-align: center;
+  letter-spacing: 0.02em;
+  color: var(--navy-blue);
+  margin-bottom: 72px;
+}
+
+.customers-list {
+  display: flex;
+  gap: 24px;
+  justify-content: center;
+  align-items: center;
+}
+
+.customers-list-item {
+  width: 168px;
+  height: 88px;
+
+  border-radius: 4px;
+  border: 1px solid var(--light-slate);
+}
+
+.customers-list-item-link {
+  display: block;
+
+  padding: 16px 32px;
+}
+
+.customers-list-item-icon {
+  fill: var(--light-slate);
+}
+
+/*Modal*/
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+
+  background-color: var(--navy-blue-overlay);
+
+  opacity: 1;
+  transform: scale(1);
+
+  transition-property: opacity, visibility;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-overlay.is-hidden {
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
+}
+
+.modal-window {
+  position: absolute;
+
+  width: 408px;
+  min-height: 584px;
+
+  top: 50%;
+  left: 50%;
+
+  background-color: var(--dairy);
+  border-radius: 4px;
+  box-shadow: 0 2px 1px 0 rgba(0, 0, 0, 0.2), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 1px 1px 0 rgba(0, 0, 0, 0.14);
+
+  transform: translate(-50%, -50%);
+  transition-property: opacity, transform;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-overlay.is-hidden .modal-window {
+  opacity: 0;
+  transform: translate(-50%, -70%);
+}
+
+.modal-close-button {
+  position: absolute;
+  cursor: pointer;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  top: 32px;
+  right: 32px;
+
+  width: 24px;
+  height: 24px;
+
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+
+  background-color: var(--corn-flower);
+}
+
+.modal-close-icon {
+  fill: var(--navy-blue);
+  display: block;
+}
+
 /*Footer*/
 .page-footer {
   background-color: var(--navy-blue);
   color: var(--cloud);
   padding: 100px 0;
+}
+
+.footer-container {
+  display: flex;
+  gap: 120px;
+  flex-direction: row;
 }
 
 .page-footer .logo {
@@ -414,4 +631,40 @@ address a:focus {
   color: var(--cloud);
   letter-spacing: 0.02em;
   width: 264px;
+}
+
+.footer-company-info {
+  margin-right: 120px;
+}
+
+.footer-socials-header {
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: var(--white);
+
+  margin-bottom: 16px;
+}
+
+.footer-socials-list {
+  display: flex;
+  gap: 16px;
+}
+
+.footer-socials-link {
+  display: block;
+
+  width: 40px;
+  height: 40px;
+
+  padding: 8px;
+  border-radius: 50%;
+
+  background-color: var(--iris);
+}
+
+.footer-socials-icon {
+  fill: var(--cloud);
 }
