--- a/css/styles.css
+++ b/css/styles.css
@@ -107,6 +107,7 @@ img {
 /*Header*/
 .page-header {
   border-bottom: 1px solid var(--corn-flower);
+  box-shadow: 0 2px 1px rgba(46, 47, 66, 0.08), 0 1px 1px rgba(46, 47, 66, 0.16), 0 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .navigation-container {
@@ -162,7 +163,7 @@ img {
   width: 100%;
   height: 4px;
   border-radius: 2px;
-  bottom: 0;
+  bottom: -1px;
   background-color: var(--ocean);
 }
 
@@ -230,6 +231,8 @@ address a:focus {
   color: var(--white);
   background-color: var(--ocean);
   border: 1px solid transparent;
+
+  box-shadow: 0 3px 1px rgba(0, 0, 0, 0.1), 0 2px 1px rgba(0, 0, 0, 0.08), 0 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .project-cards {
@@ -253,7 +256,11 @@ address a:focus {
 
 .project-cards-item:hover .project-overlay,
 .project-cards-item:focus .project-overlay {
-  transform: translateY(0);
+  transform: translateY(0%);
+}
+
+.project-cards-item-link {
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .project-cards-image-box {
@@ -306,8 +313,11 @@ address a:focus {
   background-color: var(--navy-blue);
   background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url('../images/hero/hero-bg.jpg');
   background-repeat: no-repeat;
+  background-position: center;
   background-size: cover;
   padding: 188px 0;
+  max-width: 1440px;
+  margin: 0 auto;
 }
 
 .hero-header {
@@ -361,7 +371,9 @@ address a:focus {
 .feature-item-image {
   width: 264px;
   height: 112px;
-  padding: 24px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin-bottom: 8px;
 
   border-radius: 4px;
@@ -473,15 +485,28 @@ address a:focus {
   gap: 24px;
 }
 
-.team-list-item-social-link {
-  background-color: var(--iris);
-
+.team-list-item-social-item {
   width: 40px;
   height: 40px;
+}
 
-  padding: 12px;
+.team-list-item-social-link {
+  width: 100%;
+  height: 100%;
 
+  background-color: var(--iris);
   border-radius: 50%;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.team-list-item-social-link:hover,
+.team-list-item-social-link:focus {
+  background-color: var(--ocean);
 }
 
 .team-list-item-social-icon {
@@ -498,7 +523,7 @@ address a:focus {
   font-size: 36px;
   font-style: normal;
   font-weight: 700;
-  line-height: 1.2;
+  line-height: 1.11;
   text-align: center;
   letter-spacing: 0.02em;
   color: var(--navy-blue);
@@ -515,19 +540,34 @@ address a:focus {
 .customers-list-item {
   width: 168px;
   height: 88px;
-
-  border-radius: 4px;
-  border: 1px solid var(--light-slate);
 }
 
 .customers-list-item-link {
-  display: block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
   padding: 16px 32px;
+
+  width: 100%;
+  height: 100%;
+
+  color: var(--light-slate);
+
+  border-radius: 4px;
+  border: 1px solid var(--light-slate);
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.customers-list-item-link:hover,
+.customers-list-item-link:focus {
+  border-color: var(--ocean);
+  color: var(--ocean);
 }
 
 .customers-list-item-icon {
-  fill: var(--light-slate);
+  fill: currentColor;
 }
 
 /*Modal*/
@@ -568,9 +608,7 @@ address a:focus {
   box-shadow: 0 2px 1px 0 rgba(0, 0, 0, 0.2), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 1px 1px 0 rgba(0, 0, 0, 0.14);
 
   transform: translate(-50%, -50%);
-  transition-property: opacity, transform;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-overlay.is-hidden .modal-window {
@@ -586,8 +624,10 @@ address a:focus {
   justify-content: center;
   align-items: center;
 
-  top: 32px;
-  right: 32px;
+  top: 24px;
+  right: 24px;
+
+  padding: 0;
 
   width: 24px;
   height: 24px;
@@ -596,11 +636,26 @@ address a:focus {
   border-radius: 50%;
 
   background-color: var(--corn-flower);
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-close-button:hover,
+.modal-close-button:focus {
+  background-color: var(--ocean);
+  border: none;
 }
 
 .modal-close-icon {
   fill: var(--navy-blue);
   display: block;
+
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-close-button:hover .modal-close-icon,
+.modal-close-button:hover .modal-close-icon {
+  fill: var(--white);
 }
 
 /*Footer*/
@@ -614,6 +669,7 @@ address a:focus {
   display: flex;
   gap: 120px;
   flex-direction: row;
+  align-items: baseline;
 }
 
 .page-footer .logo {
@@ -637,11 +693,11 @@ address a:focus {
   margin-right: 120px;
 }
 
-.footer-socials-header {
+.footer-socials-title {
   font-size: 16px;
   font-style: normal;
   font-weight: 500;
-  line-height: 1.2;
+  line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--white);
 
@@ -654,15 +710,23 @@ address a:focus {
 }
 
 .footer-socials-link {
-  display: block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
   width: 40px;
   height: 40px;
 
-  padding: 8px;
   border-radius: 50%;
 
   background-color: var(--iris);
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-socials-link:hover,
+.footer-socials-link:focus {
+  background-color: var(--green);
 }
 
 .footer-socials-icon {
