--- a/css/styles.css
+++ b/css/styles.css
@@ -224,6 +224,8 @@ address a:focus {
   padding: 12px 24px;
   border-radius: 4px;
   border: 1px solid var(--corn-flower);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .filters-button:hover,
@@ -260,7 +262,13 @@ address a:focus {
 }
 
 .project-cards-item-link {
+  display: block;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.project-cards-item-link:hover,
+.project-cards-item-link:focus {
+  box-shadow: 0 1px 6px rgba(46, 47, 66, 0.08), 0 1px 1px rgba(46, 47, 66, 0.16), 0 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .project-cards-image-box {
@@ -482,6 +490,8 @@ address a:focus {
 
 .team-list-item-socials {
   display: flex;
+  justify-content: center;
+  align-items: center;
   gap: 24px;
 }
 
@@ -557,7 +567,7 @@ address a:focus {
   border-radius: 4px;
   border: 1px solid var(--light-slate);
 
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .customers-list-item-link:hover,
@@ -608,7 +618,7 @@ address a:focus {
   box-shadow: 0 2px 1px 0 rgba(0, 0, 0, 0.2), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 1px 1px 0 rgba(0, 0, 0, 0.14);
 
   transform: translate(-50%, -50%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-overlay.is-hidden .modal-window {
