--- a/css/styles.css
+++ b/css/styles.css
@@ -256,9 +256,9 @@ address a:focus {
   box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 
-.project-cards-item:hover .project-overlay {
-  transform: translateY(0%);
-}
+/*.project-cards-item:hover .project-overlay {*/
+/*  transform: translateY(0%);*/
+/*}*/
 
 .project-cards-item:focus .project-overlay {
   transform: translateY(0%);
